--- a/views/create.ejs
+++ b/views/create.ejs
@@ -1,28 +1,25 @@
 <!DOCTYPE html>
 <html lang="en">
   <head>
-    <meta charset="UTF-8" />
-    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <!-- Common Meta Tags -->
+    <%- include('./common_sections/meta_tags.ejs') %>
     <title>Create Polls</title>
 
     <!-- Bootstrap CSS -->
-    <link
-      href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css"
-      rel="stylesheet"
-      integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC"
-      crossorigin="anonymous"
-    />
+    <%- include('./common_sections/bootstrap_css.ejs') %>
+
+    <!-- Some extra css -->
     <style>
       .create-poll {
         display: none;
       }
     </style>
   </head>
+
   <body>
     <div class="container">
       <div class="col-md-6 offset-md-3 my-5">
-        <%- include('./nav/nav.ejs') %>
+        <%- include('./common_sections/nav.ejs') %>
         <div class="card card-body my-4">
           <h4>Create A New Poll</h4>
           <form action="/create" method="post">
@@ -71,12 +68,10 @@
       </div>
     </div>
 
-    <script
-      src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js"
-      integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM"
-      crossorigin="anonymous"
-    ></script>
+    <!-- Bootstrap JS -->
+    <%- include('./common_sections/bootstrap_js.ejs') %>
 
+    <!-- Extra Javascript -->
     <script>
       let options = document.getElementById('options');
       let addOption = document.getElementById('addOption');
